--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "bootstrap": "^4.6.0",
         "core-js": "^3.0.0",
         "node-sass": "^5.0.0",
+        "popper": "^1.0.1",
         "popper.js": "^1.16.1",
         "regenerator-runtime": "^0.13.2",
         "sass-loader": "^10.1.1",
