--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.2",
         "@symfony/stimulus-bridge": "^1.1.0",
-        "@symfony/webpack-encore": "^1.0.0",
+        "@symfony/webpack-encore": "^1.0.2",
         "bootstrap": "^4.6.0",
         "core-js": "^3.0.0",
         "node-sass": "^5.0.0",
@@ -11,7 +11,7 @@
         "regenerator-runtime": "^0.13.2",
         "sass-loader": "^10.1.1",
         "stimulus": "^2.0.0",
-        "webpack-notifier": "^1.6.0"
+        "webpack-notifier": "^1.12.0"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -22,7 +22,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "bootstrap": "^4.1.0",
-        "jquery": "^3.5.1"
+        "jquery": "^3.5.1",
+        "yarn": "^1.22.10"
     }
 }
