--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,7 +2,7 @@ security:
     encoders:
         App\Entity\User:
             algorithm: bcrypt
-            
+
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
@@ -17,13 +17,17 @@ security:
             security: false
         main:
             anonymous: lazy
-            guard:
-                authenticators:
-                    - App\Security\LoginFormAuthenticator
+            
+            provider: app_user_provider
+
+            form_login: 
+                login_path: app_login
+                check_path: app_login
+            
             logout:
-                path: /logout
+                path: app_logout
                 # where to redirect after logout
-                target: /login
+                target: app_login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
